# windgrib

./: .gitignore  .pylintrc  .pypirc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES_SUMMARY.md  EXAMPLE_FIX_SUMMARY.md  MANIFEST.in  README.md  build_package.bat  herbie_output.txt  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements-tests.txt  requirements.txt  setup.cfg  test_example_import.py
.github/workflows/: test.yml
docs/: benchmark_results.md  custom_models.md  examples.md  index.md  technical_guide.md  usage_examples.md  usage_guide.md  usage_modes.md
examples/: custom_model.py  data_visualization.py  download_grib.py  download_grib_subset.py  ecmf_gfs_wind_comparison.py  ecmf_gfs_wind_speed_comparison.py  gfs_temperature_example.py  herbie_alternative.py  temperature_variation_near_toulouse.py  windgrib_example.py
examples/benchmarks/: benchmark_grib_to_dataset.py  benchmark_windgrib_vs_herbie.py
tests/: __init__.py  test_grib.py  test_grib_to_dataset.py
tests/data/: README.md
windgrib/: __init__.py  grib.py  grib_to_dataset.py
