[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windgrib"
dynamic = ["version"]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A Python package for working with GRIB weather data files"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "xarray>=0.20.0",
    "s3fs>=2021.11.0",
    "requests>=2.26.0",
    "tqdm>=4.62.0",
    "cfgrib>=0.9.10.0",
    "dask>=2021.11.0",
    "netCDF4>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "isort>=5.13.2", 
    "mypy>=1.8.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "build>=1.0.3",
    "twine>=4.0.2",
    "types-requests",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "flake8>=6.1.0",
    "pylint>=3.2.7",
    "coverage>=7.6.1",
    "pytest-mock>=3.14.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
]
keywords = ["grib", "weather", "meteorology", "data", "forecast", "weather-data", "gfs", "ecmwf"]

[project.urls]
"Homepage" = "https://github.com/yourusername/windgrib"
"Bug Tracker" = "https://github.com/yourusername/windgrib/issues"
"Documentation" = "https://github.com/yourusername/windgrib/blob/main/README.md"

[tool.setuptools]
packages = ["windgrib"]

[tool.setuptools.dynamic]
version = {attr = "windgrib.__version__"}

[tool.setuptools.package-data]
windgrib = ["*.txt", "*.json"]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true