[metadata]
name = windgrib
version = attr: windgrib.__version__
author = Your Name
author_email = your.email@example.com
description = A Python package for working with GRIB weather data files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/windgrib
project_urls =
    Bug Tracker = https://github.com/yourusername/windgrib/issues
    Documentation = https://github.com/yourusername/windgrib/blob/main/README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    xarray>=0.20.0
    s3fs>=2021.11.0
    requests>=2.26.0
    tqdm>=4.62.0
    cfgrib>=0.9.10.0
    dask>=2021.11.0

[options.packages.find]
exclude =
    tests*
    examples*
    docs*

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0